--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2314,3 +2314,9 @@ html {
 a:focus {
     outline: none;
 }
+.text-left {
+    text-align: left !important;
+}
+.modal.treatment_center_class.ng-scope.ng-isolate-scope.in .modal-dialog {
+    margin-top: 15%;
+}
