--- a/app/components/statusView/style.css
+++ b/app/components/statusView/style.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 10px 0px;
   font-weight: 700;
-  background-color: #73ac4b;
+  background-color: #115a8f;;
   position: fixed;
   top: 0px;
   z-index: 1000;
