--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2519,6 +2519,7 @@ div#byDrug button {
 }
 .checkbox_checked{
   cursor:pointer;
+  margin-top: 5px;
 }
 .col-md-12.col-sm-12.col-lg-12.col-xs-12.padding_0.listing_wrapper_inner {
     padding-left: 10px;
