fixed popup on sponsored page

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2593,3 +2593,8 @@ i.fa.fa-times.fa-1 {
     width: 100%;
     margin-bottom: 30px;
 }
+.rehab_content{
+    color: #555;
+    font-family: arial;
+    font-size: 13px;
+}
