added fields in payment option

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2613,3 +2613,8 @@ i.fa.fa-times.fa-1 {
     padding-bottom: 10px;
     border-radius: 5px;
 }
+.no_banner_ads{
+    font-size: 20px;
+    margin-left: 18px;
+    margin-bottom: 20px;
+}
