fixed treatment center in my profile

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -1758,7 +1758,7 @@ address {
 }
 
 .left_content.left_align li {
-  background: url("themes/addiction/images/arrow-right-01-16.png") no-repeat scroll left top rgba(0, 0, 0, 0);
+  background: url("https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-16.png") no-repeat scroll left top rgba(0, 0, 0, 0);
   line-height: 125%;
   list-style-position: outside;
   list-style-type: none;
