added slider in treatment center

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2645,3 +2645,6 @@ img#sidebar_ad {
     max-width: 298px !important;
     max-height: 174px !important;
 }
+.treatmentcenter_image{
+  margin-bottom: 10px;
+}
