added slider in treatment center

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2646,5 +2646,5 @@ img#sidebar_ad {
     max-height: 174px !important;
 }
 .treatmentcenter_image{
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
 }
