--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2657,3 +2657,7 @@ h2.contct_heding.text-right {
     max-width: 248px !important;
     max-height: 145px !important;
 }*/
+.no_treatment_center{
+  font-size: 27px;
+  margin-left: 10px;
+}
