--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2624,8 +2624,8 @@ i.fa.fa-times.fa-1 {
   margin-left:-30px;
 }
 .contact-left {
-  border-right: 1px solid #333;
-  height: 300px;
+  /*border-right: 1px solid #333;
+  height: 300px;*/
 }
 h2.contct_heding.text-right {
     text-align: right !important;
