new signup page

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2718,3 +2718,85 @@ h2.contct_heding.text-right {
   position: absolute;
   z-index: 99999;
 }
+/*progress bar*/
+.progress-content-one {
+  display: block;
+  margin: 0 auto;
+  width: 85%;
+}
+.progress-img{
+  position: relative;
+  height: 400px;
+  background-position: center;
+  background-size:auto;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
+
+.progress-img-wrap{
+  position: relative;
+}
+.progress-img-wrap::before{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background-image: -moz-linear-gradient(#83BF00 , #00A7BF);
+  background-image: -webkit-linear-gradient(#83BF00 , #00A7BF);
+  background-image: linear-gradient(#83BF00 , #00A7BF);
+  top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+  z-index: 1;
+}
+.para-container{
+  display: block;
+margin-top: 23%;
+}
+.progressbar .progress{
+  position: relative;
+  box-shadow: none;
+  border-radius: 5px;
+}
+.para-container p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    margin-bottom: 12px;
+    color: #73ac4b;
+    line-height: 1.6;
+    text-align: center;
+}
+
+.progressbar{
+  clear: both;
+  width: 70%;
+  margin: 0 auto;
+}
+.progressbar .progress-bar-success{
+  /*position: relative;*/
+  background-image: linear-gradient(170deg,#83BF00 ,#00A7BF );
+  line-height: 22px;
+}
+span.stick-me{
+  position: absolute;
+  left: 48%;
+  color: #83BF00;
+}
+.progress-grediant {
+  border-left: 1px solid #83BF00;
+  border-right: 1px solid #00A7BF;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-position: 0 0, 0 100% ;
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 1px;
+  -moz-background-size: 100% 1px;
+  background-size: 100% 1px;
+  background-image: -webkit-linear-gradient(left, #3acfd5 0%, #00A7BF 100%), -webkit-linear-gradient(left, #83BF00 0%, #3a4ed5 100%);
+  background-image: -moz-linear-gradient(left, #83BF00 0%, #00A7BF 100%), -moz-linear-gradient(left, #83BF00 0%, #3a4ed5 100%);
+  background-image: -o-linear-gradient(left, #83BF00 0%, #00A7BF 100%), -o-linear-gradient(left, #83BF00 0%, #00A7BF 100%);
+  background-image: linear-gradient(to right, #83BF00 0%, #00A7BF 100%), linear-gradient(to right, #83BF00 0%, #00A7BF 100%);
+  height: 22px;
+}
